src/app/audit/photos/photos.component.scss
.image-box {
  position: relative;
  overflow: hidden;
  min-height: 100px;
}

.overlay {
  position: absolute;
  bottom: 0;
  width: 100%;
  text-align: center;
  color: white;
  background: rgba(0, 0, 0, 0.5); /* Black see-through */
  opacity: 0;
  transition: opacity 0.7s ease;
}

.image-box:hover .overlay {
  opacity: 1;
}

